--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <!-- Basic -->
   <meta charset="utf-8" />
   <title>Ring Of Fire</title>
-  <base href="/" />
+  <base href="/angular-projects/ringoffire/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <!-- SEO / Meta -->
