cookie, datenschutz, impressum added

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 
   <meta charset="utf-8" />
@@ -7,6 +8,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="robots" content="index,follow" />
 
   <meta name="description" content="Ring Of Fire – Card Game" />
   <meta name="theme-color" content="#d32f2f" />
@@ -20,14 +22,17 @@
   <link rel="manifest" href="assets/img/favicon/site.webmanifest" />
   <meta name="apple-mobile-web-app-title" content="RingOfFire" />
   <meta name="mobile-web-app-capable" content="yes" />
+  <meta property="og:title" content="Ring Of Fire" />
+  <meta property="og:description" content="Ring Of Fire – Card Game" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ring.dimit.cc/" />
+  <meta property="og:image" content="https://ring.dimit.cc/assets/img/og-image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
@@ -35,4 +40,5 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
